--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vant/auto-import-resolver": "^1.2.1",
+    "axios": "^1.7.9",
     "pinia": "^2.3.0",
+    "unplugin-auto-import": "^0.19.0",
+    "unplugin-vue-components": "^0.28.0",
+    "vant": "^4.9.15",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
